--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,9 @@ build:
   stage: build
   when: always
   script:
-    - docker login $REGISTRY -u $REGISTRY_USER -p $REGISTRY_PASSWORD
-    - docker build -t $REGISTRY/web/pelican:$CI_COMMIT_TAG .
-    - docker push $REGISTRY/web/pelican:$CI_COMMIT_TAG
-    - docker logout $REGISTRY
+    - docker login repo-pub-docker.sourdin.ovh -u $REGISTRY_USER -p $REGISTRY_PASSWORD
+    - docker build -t repo-pub-docker.sourdin.ovh/web/pelican:$CI_COMMIT_TAG .
+    - docker push repo-pub-docker.sourdin.ovh/web/pelican:$CI_COMMIT_TAG
+    - docker logout repo-pub-docker.sourdin.ovh
   rules:
     - if: $CI_COMMIT_TAG
